<resources>
    <string name="app_name">GastosCompartidos</string>
    <string name="prefs_file">com.lfcounago.gastoscompartidos.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">55935314119-3g35kfd7k0tvf2mco5tcvco6vsgopaio.apps.googleusercontent.com</string>
    <string name="open_nav">Abrir navegador</string>
    <string name="close_nav">Cerrar navegador</string>
    <string-array name="currencies">
        <item>Euro - EUR</item>
        <item>Baht tailandés - THB</item>
        <item>Bolívar fuerte de Venezuela - VEF</item>
        <item>Boliviano Bolivia - BOB</item>
        <item>Chelin keniano - KES</item>
        <item>Colón costarricense - CRC</item>
        <item>Córdoba nicaragüense - NIO</item>
        <item>Corona checa - CZK</item>
        <item>Corona danesa - DKK</item>
        <item>Corona islandesa - ISK</item>
        <item>Corona islandesa - ISK</item>
        <item>Corona sueca - SEK</item>
        <item>Dalasi Gambia - GMD</item>
        <item>Dinar argelino - DZD</item>
        <item>Dinar bahreiní - BHD</item>
        <item>Dinar jordano - JOD</item>
        <item>Dinar kuwaití - KWD</item>
        <item>Dinar serbio - RSD</item>
        <item>Dinar tunecino - TND</item>
        <item>Dírham Em. Árabes - AED</item>
        <item>Dírham marroquí - MAD</item>
        <item>Dólar americano - USD</item>
        <item>Dólar australiano - AUD</item>
        <item>Dólar canadiense - CAD</item>
        <item>Dólar de Hong Kong - HKD</item>
        <item>Dólar jamaiquino - JMD</item>
        <item>Dólar neozelandés - NZD</item>
        <item>Dolar singapurense - SGD</item>
        <item>Dólar taiwanés - TWD</item>
        <item>Dólar trinitense - TTD</item>
        <item>Dong vietnamita - VND</item>
        <item>Florín de Antillas Holandesas - ANG</item>
        <item>Florín de Aruba - AWG</item>
        <item>Forint - HUF</item>
        <item>Franco BCEAO - XOF</item>
        <item>Franco BEAC - XAF</item>
        <item>Franco suizo - CHF</item>
        <item>Grivna Ucrania - UAH</item>
        <item>Guaraní Paraguay - PYG</item>
        <item>Kuna croata - HRK</item>
        <item>Kwanza - AOA</item>
        <item>Lek - ALL</item>
        <item>Leu rumano - RON</item>
        <item>Lev búlgaro - BGN</item>
        <item>Libra egipcia - EGP</item>
        <item>Libra escocesa - SCP</item>
        <item>Libra esterlina - GBP</item>
        <item>Lira turca - TRY</item>
        <item>Lita lituana - LTL</item>
        <item>Manat azerbaiyano - AZM</item>
        <item>Marco bosnio - BAM</item>
        <item>Nuevo shequel israelí - ILS</item>
        <item>Nuevo sol peruano - PEN</item>
        <item>Peso argentino - ARS</item>
        <item>Peso chileno - CLP</item>
        <item>Peso colombiano - COP</item>
        <item>Peso dominicano - DOP</item>
        <item>Peso filipino - PHP</item>
        <item>Peso mexicano - MXN</item>
        <item>Peso uruguayo - UYU</item>
        <item>Quetzal guatemalteco - GTQ</item>
        <item>Rand sudafricano - ZAR</item>
        <item>Real brasileño - BRL</item>
        <item>Rial qatarí - QAR</item>
        <item>Rial saudí - SAR</item>
        <item>Ringgit malayo - MYR</item>
        <item>Rublo ruso - RUB</item>
        <item>Rupia india - INR</item>
        <item>Rupia indonesia - IDR</item>
        <item>Rupia mauriciana - MUR</item>
        <item>Taka - BDT</item>
        <item>Won surcoreano - KRW</item>
        <item>Yen - JPY</item>
        <item>Yuan chino - CNY</item>
        <item>Zloty polaco - PLN</item>
    </string-array>
    <string-array name="categories">
        <item>Viaje</item>
        <item>Casa compartida</item>
        <item>Pareja</item>
        <item>Celebración</item>
        <item>Proyecto</item>
        <item>Otros</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!---
    GENERAL
    -->
    <string name="cancel">Cancelar</string>
    <string name="acept">Aceptar</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>

    <!---
    activity_add_spend
    -->
    <string name="add_spend_title">Añadir un nuevo gasto</string>
    <string name="add_spend_spend_title">Título del gasto</string>
    <string name="add_spend_spend_Date">Fecha del gasto</string>
    <string name="add_spend_select_date">Seleccionar fecha</string>
    <string name="add_spend_spend_amount">Cantidad del gasto</string>
    <string name="add_spend_write_amount">Escribe la cantidad del gasto</string>
    <string name="add_spend_payer">Usuario del grupo que pagó el gasto</string>
    <string name="add_spend_shared">Usuarios con los que se comparte el gasto</string>
    <string name="add_spend_group_user">Todos los usuarios del grupo</string>
    <string name="add_spend_save_spend">Guardar gasto</string>

    <!---
    activity_add_user
    -->
    <string name="add_user_title">Añadir Usuarios</string>
    <string name="add_user_users">Añadir usuarios al grupo</string>
    <string name="add_user_emails">Escribe los emails separados por comas</string>

    <!---
    activity_balance

    <string name=""></string>
    -->


    <!---
    activity_create_group
    -->
    <string name="create_group_title">Crear un grupo</string>
    <string name="create_group_name">Nombre del grupo</string>
    <string name="create_group_write_name">Escribe el nombre del grupo</string>
    <string name="create_group_currency">Divisa</string>
    <string name="create_group_catergories">Categoría</string>
    <string name="create_group_users">Usuarios del grupo</string>
    <string name="create_group_write_users">Escribe los emails separados por comas</string>
    <string name="create_group_create_group">Crear grupo</string>

    <!---
    activity_edit_profile
    -->
    <string name="edit_profile_name">Tu nombre</string>
    <string name="edit_profile_email">Correo electrónico</string>
    <string name="edit_profile_phone">Número de teléfono</string>

    <!---
    activity_edit_spend
    -->
    <string name="edit_spend_title">Editar Gasto</string>
    <string name="edit_spend_spend_title">Título Gasto</string>
    <string name="edit_spend_spend">Gasto</string>
    <string name="edit_spend_currency">Divisa</string>

    <!---
    activity_group_details
    -->
    <string name="group_details_title">Gastos</string>
    <string name="group_details_group">Grupo</string>

    <!---
        activity_group_profile
    -->
    <string name="group_profile_name">Nombre del grupo</string>
    <string name="group_profile_currency">Divisa del grupo</string>
    <string name="group_profile_categories">Categoría del grupo</string>
    <string name="group_profile_users">Participantes:</string>

    <!---
        activity_liquidations

        <string name=""></string>
    -->


    <!---
        activity_list_user_groups
    -->
    <string name="list_user_groups_title">Grupos a los que perteneces</string>

    <!---
        activity_login
    -->
    <string name="login_login">Iniciar sesión</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_register">¿Nuevo por aquí? Regístrate</string>
    <string name="login_reset_password">Recuperar contraseña</string>

    <!---
        activity_profile
    -->
    <string name="profile_name">Nombre</string>
    <string name="profile_name2">Tu nombre</string>
    <string name="profile_email">Email</string>
    <string name="profile_email2">Tu dirección de email</string>
    <string name="profile_phone">Teléfono</string>
    <string name="profile_phone2">Número de teléfono</string>
    <string name="profile_edit_profile">Modificar perfil</string>
    <string name="profile_reset_password">Cambiar contraseña</string>
    <string name="profile_logout">Cerrar sesión</string>

    <!---
        activity_register
    -->
    <string name="register_title">Crear una cuenta nueva</string>
    <string name="register_register">Registrarse</string>
    <string name="register_login">¿Ya tienes una cuenta? Inicia sesión</string>

    <!---
        activity_total_expenses
    -->
    <string name="total_expenses_title">Gastos Totales</string>
    <string name="total_expenses_total_spend">Gasto total del grupo:</string>
    <string name="total_expenses_total_pay">Total pagado:</string>
    <string name="total_expenses_partial_spend">Cuota del total:</string>
    <string name="total_expenses_pay_sent">Pagos realizados:</string>
    <string name="total_expenses_pay_recived">Pagos recibidos:</string>

    <!---
        user_item
    -->
    <string name="user_item_user_name">Nombre del usuario: </string>
    <string name="user_item_user_amount">Saldo usuario </string>
    <string name="user_item_currency">Divisa</string>

    <!---
        activity_debt_liquidation
    -->
    <string name="debt_liquidation_title">Deudas con usuarios</string>
    <string name="debt_liquidation_debts">Deudas: </string>

    <!---
        activity_settle_debt
    -->
    <string name="settle_debt_title">Liquidar Deuda</string>
    <string name="settle_debt_liquidation">Liquidadicón</string>
    <string name="settle_debt_amount">Cantidad del gasto</string>
    <string name="settle_debt_payer">Usuario que paga la deuda</string>
    <string name="settle_debt_user">El usuario</string>
    <string name="settle_debt_user_to_pay">Usuario al que le paga la deuda</string>


</resources>