<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0.002"
            android:text="@string/user_item_user_name" />

        <TextView
            android:id="@+id/tvUserBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_user_amount" />

        <TextView
            android:id="@+id/tvBalanceCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_currency" />

    </LinearLayout>
</LinearLayout>