<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpendActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settle_debt_title"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settle_debt_liquidation"
                android:textSize="18sp" />

            <!--<TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Fecha del gasto"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar fecha" />-->

            <TextView
                android:id="@+id/tviewCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settle_debt_amount"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCantidad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:hint="@string/settle_debt_amount"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvDivisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="€"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvUsuPagador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settle_debt_payer"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPagador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settle_debt_user"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCompartidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settle_debt_user_to_pay"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvUsuDeuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settle_debt_user"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/layoutCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/red2"
                android:text="@string/save"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red2"
                android:onClick="goToActividadAnterior"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>